[package]
name = "schedule-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
daggy = "0.8.0"
derive_more = { version = "0.99.17", features = ["display"] }
kv-log-macro = "1.0.7"
log = { version = "0.4.17", features = ["kv_unstable"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
